Fixed the responsive issues on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -898,3 +898,13 @@ footer {
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 576px) {
+  footer {
+    padding: 40px 30px;
+  }
+
+  .copyright {
+    font-size: 10px;
+  }
+}
